# bmets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: demo.frag  demo.vert
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  antlr4-generator.cmake.in  antlr4-runtime.cmake.in
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
src/: main.cpp
src/game/: Manager.cpp  Manager.h  Map.Parsing.cpp  Map.Structure.cpp  Map.cpp  Map.h  StringHash.h  Timer.cpp  Timer.h
src/math/: Fresnel.cpp  Fresnel.h  SPChildL.cpp  SPChildL.h  SPChildV.cpp  SPChildV.h  SPMainL.cpp  SPMainL.h  SPMainV.cpp  SPMainV.h  SPModel.h  SPNumNode.cpp  SPNumNode.h  Spline.h  Track.h
src/parser/: BveDataFile.cpp  BveDataFile.h  BveDictionary.cpp  BveDictionary.h  BveMapAntlr.cpp  BveMapAntlr.h  BveMapLexer.g4  BveMapParser.g4  BveMapScript.Builtin.cpp  BveMapScript.cpp  BveMapScript.h  BveMapValue.cpp  BveMapValue.h  BveMapVisitor.cpp  BveMapVisitor.h
src/parser/.antlr/: BveMapLexer.interp  BveMapLexer.java  BveMapLexer.tokens  BveMapParser.interp  BveMapParser.java  BveMapParser.tokens
src/render/: ImFileBrowser.h  MainLoop.h  Manager.cpp  Manager.h  Model.cpp  Model.h  Scene.h  SceneImgui.cpp  SceneImgui.h  SceneMain.cpp  SceneMain.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/util/: FmtException.cpp  FmtException.h  Iconvpp.h  OpenFileDialog.h  Path.cpp  Path.h  WideStr.h
